--- a/Calarasi/css/style.css
+++ b/Calarasi/css/style.css
@@ -50,6 +50,10 @@ body.lock {
   overflow: hidden;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .wrapper {
   width: 100%;
   min-height: 100%;
@@ -641,7 +645,7 @@ textarea {
 
 .homepage-news .news-posts {
   display: grid;
-  grid-gap: 65px 30px;
+  grid-gap: 0 30px;
   grid-template-columns: repeat(2, 1fr);
 }
 
@@ -667,6 +671,7 @@ textarea {
   -webkit-transform: translateY(65px);
       -ms-transform: translateY(65px);
           transform: translateY(65px);
+  margin-bottom: 65px;
 }
 
 .homepage-news .news-posts .post-item .post-thumbnail {
@@ -846,6 +851,7 @@ textarea {
 }
 
 .modal {
+  display: none;
   width: 550px;
   height: 400px;
   background-color: #F5EEDB;
@@ -1655,6 +1661,94 @@ textarea {
 
 .horizontal-wrapper__menu .menu-list__item .menu-list__link {
   color: #423831;
+}
+
+.horizontal-wrapper.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 10000;
+  top: 0px;
+  background-color: #fff;
+}
+
+.technology-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  widows: 100%;
+  height: 900px;
+}
+
+.technology-title h2 {
+  font-size: 68px;
+  line-height: 93px;
+  color: #FFFFFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.technology-posts {
+  max-width: 1300px;
+  margin: 150px auto;
+}
+
+.technology-posts__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column: 2 span;
+  grid-gap: 200px 150px;
+  place-items: center;
+}
+
+.technology-posts__grid .technology-post:nth-child(3n + 0) {
+  width: 80%;
+  grid-column: 2 span;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.technology-posts__grid .technology-post:nth-child(3n + 0) .technology-post__content {
+  -webkit-transform: translateX(-150px);
+      -ms-transform: translateX(-150px);
+          transform: translateX(-150px);
+  margin-right: -150px;
+}
+
+.technology-posts__grid .technology-post img {
+  width: 100%;
+}
+
+.technology-posts__grid .technology-post__content {
+  width: 95%;
+  margin: 0 auto;
+  background-color: #F8F8F8;
+  padding: 30px 17px;
+  -webkit-transform: translateY(-100px);
+      -ms-transform: translateY(-100px);
+          transform: translateY(-100px);
+  margin-bottom: -100px;
+}
+
+.technology-posts__grid .technology-post__content h3 {
+  font-weight: 800;
+  color: #000000;
+  margin-bottom: 10px;
+}
+
+.technology-posts__grid .technology-post__content p {
+  color: #000000;
 }
 
 .single {
