--- a/#src/scss/single.scss
+++ b/#src/scss/single.scss
@@ -38,6 +38,10 @@
             img {
                 width: 30px;
                 height: 30px;
+                transition: transform .3s;
+                &:hover{
+                    transform: scale(1.15);
+                }
             }
         }
     }
