--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -12,7 +12,7 @@ h2 {
 
 h3 {
     font-weight: 800;
-    font-size: 26px;
+    @include adaptiv-value('font-size', 26, 20, 1);
     line-height: 36px;
 }
 
