--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -19,4 +19,5 @@
 @import './components/pageTitle.scss';
 @import './components/gallerySlider.scss';
 @import './components/awards.scss';
+@import './components/productSlider.scss';
 @import './components/choices.min.scss';
